// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title shows the correct snapshot for the Title component tree (default) 1`] = `
<h1
  className="css-lcomo css-5eu6oy"
>
  Title
</h1>
`;

exports[`Title shows the correct snapshot for the Title component tree (tag) 1`] = `
<span
  className="css-lcomo css-5eu6oy"
>
  Title
</span>
`;
